[front-back] connect controller

--- a/src/main/resources/templates/profileaccount.html
+++ b/src/main/resources/templates/profileaccount.html
@@ -33,7 +33,7 @@
 
             input[type="text"],
             input[type="password"] {
-                width: 100%;
+                width: 97.6%;
                 padding: 12px 20px;
                 margin: 8px 0;
                 box-sizing: border-box;
@@ -352,6 +352,8 @@
                 background-color: rgb(69, 191, 191);
                 padding: 10px 20px;
                 border: none;
+                width:97.6%;
+                border-radius: 8px;
                 color: white;
                 font-size: 15px;
                 cursor: pointer;
@@ -559,7 +561,7 @@
                     text-decoration: underline;
                     transform: scale(1.1);
                 }
-                
+
                 .sectiontrue{
                     display: none;
                 }
@@ -570,12 +572,39 @@
                 margin:30px auto;
                 font-size:20px;
             }
-            
+
             .icon2 h,p{
                 margin-top:2px;
             }
             .icon2 p{
                 word-wrap: break-word;
+            }
+
+            .image{
+                width:50px;
+            }
+            .flexx{
+                display:flex;
+                align-items:center;
+            }
+            .post-headerr{
+                margin-top: 8px;
+                margin-left:10px;
+                font-size:10px;
+
+            }
+            .post-headerrr{
+
+                font-size:15px;
+            }
+            textarea{
+                height:120px;
+                width:92.7%;
+                resize: none;
+                padding: 12px 20px;
+            }
+            .titlee{
+                display:inline;
             }
         </style>
 
@@ -634,7 +663,7 @@
                 <div class="section1">
                     <p><span class="bold-text">&#10084; MY PROFILE &#10084;</span></p>
                     <div class="profile">
-                        <img src="https://i.pinimg.com/736x/a0/76/98/a076984d817dbd445bda21ec231c41b9.jpg" alt="Avatar" class="">
+                        <img src="https://static.vecteezy.com/system/resources/thumbnails/009/734/564/small/default-avatar-profile-icon-of-social-media-user-vector.jpg" alt="Avatar" class="">
                     </div>
                     <div class="icon">
                         <h3>&#127380; UserID: </h3><p th:text="${user.userID}"></p>
@@ -660,7 +689,7 @@
             <div class="section3">
                 <p><span class="bold-text">Navigation</span></p>
                 <ul>
-                    <!--                    <li onclick="changeBackgroundColor(this)">&#127968; Home</li>-->
+                    <li onclick="changeBackgroundColor(this)">&#127968; <a href="viewforum">Home</a></li>
                     <!--                    <li onclick="changeBackgroundColor(this)">&#127916; Videos</li>-->
                     <li onclick="changeBackgroundColor(this)">&#128206; Tags</li>
                     <li onclick="changeBackgroundColor(this)">&#128172; Subjects</li>
@@ -676,90 +705,117 @@
 
             <!-- Phần 4 -->
             <div class="section4">
-                <div class="post">
-                    <div class="post-header">
-                        <h2> Add Post</h2>
+                <form action="AddNewBlog" method="POST">
+                    <div class="post">
+                        <div class="post-header">
+                            <input type="text" class="notclean" placeholder="Title" id="NewTitle" name="NewTitle">
+                        </div>
+                        <div class="post-content">
+                            <!--                                <input type="text" class="" placeholder="Add..." id="NewContent" name="NewContent">-->
+                            <textarea id="NewContent" name="NewContent" rows="4" cols="50" placeholder="Content (limit up to 255 words)"></textarea>
+                        </div>
+                        <div class="post-footer">
+                            <button type="submit" value="AddBlog" class="add">&#128395; Post</button>
+                        </div>
+
+
+                        <!--                    <p><span class="bold-text">Are you passionate about Software Engineering?</span></p>
+                                            <div class="reaction">&#128077;</div>  Biểu tượng reaction (đây là thumbs up) 
+                                            <div class="comment">&#128172;</div>  Biểu tượng comment -->
+                    </div>
+                </form>
+
+
+                <div th:each="post : ${post}" class="post">
+                    <div class="flexx">
+                        <img src="https://static.vecteezy.com/system/resources/thumbnails/009/734/564/small/default-avatar-profile-icon-of-social-media-user-vector.jpg" class="image" alt="Image"/>
+                        <div class="post-headerr">
+                            <h2 th:text="${post.author}">author</h2>
+                        </div>
+                    </div>
+                    <div class="post-headerrr">
+                        <h2 th:text="${post.title}">title</h2>
+                    </div>
+                    <div style="border-top: 1px solid #000;"></div>
+                    <div class="post-content">
+                        <p th:text="${post.postContent}">content</p>
                     </div>
                     <div class="post-content">
-                        <input type="text" class="" placeholder="Add...">
+                        <!--                            <a th:href="@{/details/{id}(id=${entity.id})}">Show More</a>-->
                     </div>
                     <div class="post-footer">
-                        <button class="add">&#128395; <span>Post</span></button>
-                    </div>
+                        <span class="likes">&#128077; Like</span>
+                        <span class="comments">&#128172; Comment</span>
+                    </div>    
+                </div>     
 
-
-                    <!--                    <p><span class="bold-text">Are you passionate about Software Engineering?</span></p>
-                                        <div class="reaction">&#128077;</div>  Biểu tượng reaction (đây là thumbs up) 
-                                        <div class="comment">&#128172;</div>  Biểu tượng comment -->
-                </div>
-
-                <div class="post">
-                    <div class="post-header">
-                        <h2>Post Title</h2>
-                    </div>
-                    <div class="post-content">
-                        <p>Are you passionate about Software Engineering?</p>
-                    </div>
-                    <div class="post-footer">
-                        <span class="likes">&#128077; Thích</span>
-                        <span class="comments">&#128172; Bình luận</span>
-                    </div>
-
-                    <!--                    <p><span class="bold-text">Are you passionate about Software Engineering?</span></p>
-                                        <div class="reaction">&#128077;</div>  Biểu tượng reaction (đây là thumbs up) 
-                                        <div class="comment">&#128172;</div>  Biểu tượng comment -->
-                </div>
-
-                <div class="post">
-                    <div class="post-header">
-                        <h2>Post Title</h2>
-                    </div>
-                    <div class="post-content">
-                        <p>Are you passionate about Software Engineering?</p>
-                    </div>
-                    <div class="post-footer">
-                        <span class="likes">&#128077; Thích</span>
-                        <span class="comments">&#128172; Bình luận</span>
-                    </div>
-
-                    <!--                    <p><span class="bold-text">Are you passionate about Software Engineering?</span></p>
-                                        <div class="reaction">&#128077;</div>  Biểu tượng reaction (đây là thumbs up) 
-                                        <div class="comment">&#128172;</div>  Biểu tượng comment -->
-                </div>
-
-                <div class="post">
-                    <div class="post-header">
-                        <h2>Post Title</h2>
-                    </div>
-                    <div class="post-content">
-                        <p>Are you passionate about Software Engineering?</p>
-                    </div>
-                    <div class="post-footer">
-                        <span class="likes">&#128077; Thích</span>
-                        <span class="comments">&#128172; Bình luận</span>
-                    </div>
-
-                    <!--                    <p><span class="bold-text">Are you passionate about Software Engineering?</span></p>
-                                        <div class="reaction">&#128077;</div>  Biểu tượng reaction (đây là thumbs up) 
-                                        <div class="comment">&#128172;</div>  Biểu tượng comment -->
-                </div>
-
-                <div class="post">
-                    <div class="post-header">
-                        <h2>Post Title</h2>
-                    </div>
-                    <div class="post-content">
-                        <p>Are you passionate about Software Engineering?</p>
-                    </div>
-                    <div class="post-footer">
-                        <span class="likes">&#128077; Thích</span>
-                        <span class="comments">&#128172; Bình luận</span>
-                    </div>
-
-                    <!--                    <p><span class="bold-text">Are you passionate about Software Engineering?</span></p>
-                                        <div class="reaction">&#128077;</div>  Biểu tượng reaction (đây là thumbs up) 
-                                        <div class="comment">&#128172;</div>  Biểu tượng comment -->
-                </div>
+                <!--                <div class="post">
+                                    <div class="post-header">
+                                        <h2>Post Title</h2>
+                                    </div>
+                                    <div class="post-content">
+                                        <p>Are you passionate about Software Engineering?</p>
+                                    </div>
+                                    <div class="post-footer">
+                                        <span class="likes">&#128077; Thích</span>
+                                        <span class="comments">&#128172; Bình luận</span>
+                                    </div>
+                
+                                                        <p><span class="bold-text">Are you passionate about Software Engineering?</span></p>
+                                                        <div class="reaction">&#128077;</div>  Biểu tượng reaction (đây là thumbs up) 
+                                                        <div class="comment">&#128172;</div>  Biểu tượng comment 
+                                </div>
+                
+                                <div class="post">
+                                    <div class="post-header">
+                                        <h2>Post Title</h2>
+                                    </div>
+                                    <div class="post-content">
+                                        <p>Are you passionate about Software Engineering?</p>
+                                    </div>
+                                    <div class="post-footer">
+                                        <span class="likes">&#128077; Thích</span>
+                                        <span class="comments">&#128172; Bình luận</span>
+                                    </div>
+                
+                                                        <p><span class="bold-text">Are you passionate about Software Engineering?</span></p>
+                                                        <div class="reaction">&#128077;</div>  Biểu tượng reaction (đây là thumbs up) 
+                                                        <div class="comment">&#128172;</div>  Biểu tượng comment 
+                                </div>
+                
+                                <div class="post">
+                                    <div class="post-header">
+                                        <h2>Post Title</h2>
+                                    </div>
+                                    <div class="post-content">
+                                        <p>Are you passionate about Software Engineering?</p>
+                                    </div>
+                                    <div class="post-footer">
+                                        <span class="likes">&#128077; Thích</span>
+                                        <span class="comments">&#128172; Bình luận</span>
+                                    </div>
+                
+                                                        <p><span class="bold-text">Are you passionate about Software Engineering?</span></p>
+                                                        <div class="reaction">&#128077;</div>  Biểu tượng reaction (đây là thumbs up) 
+                                                        <div class="comment">&#128172;</div>  Biểu tượng comment 
+                                </div>
+                
+                                <div class="post">
+                                    <div class="post-header">
+                                        <h2>Post Title</h2>
+                                    </div>
+                                    <div class="post-content">
+                                        <p>Are you passionate about Software Engineering?</p>
+                                    </div>
+                                    <div class="post-footer">
+                                        <span class="likes">&#128077; Thích</span>
+                                        <span class="comments">&#128172; Bình luận</span>
+                                    </div>
+                
+                                                        <p><span class="bold-text">Are you passionate about Software Engineering?</span></p>
+                                                        <div class="reaction">&#128077;</div>  Biểu tượng reaction (đây là thumbs up) 
+                                                        <div class="comment">&#128172;</div>  Biểu tượng comment 
+                                </div>-->
 
             </div>
         </div>
