[Back-End] 100 % complete blog / view

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -211,6 +211,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <div>
                         <span>ConfirmPass:</span> 
                         <input type="password" class="search" placeholder="" id="confirmpassword" name="confirmpassword">
+                        <p class="red" th:text="${Model.PasswordConfirmError}"></p>
                     </div>
                     <div>
                         <span>Birthdate:</span> 
