--- a/src/main/resources/templates/viewforum.html
+++ b/src/main/resources/templates/viewforum.html
@@ -681,6 +681,7 @@
                             </div>
                             <div class="post-footer">
                                 <button type="submit" value="AddBlog" class="add">&#128395; Post</button>
+                                <p class="red" th:text="${AddBlogError}"></p>
                             </div>
 
 
